# classsync-quality-analysis

./: .gitignore  README.md
.github/workflows/: devsecops.yml
App/: app.json  firebaseConfig.js  metro.config.js  package-lock.json  package.json
App/Components/: AnmatedText.jsx  BackgroundWrapper.jsx  Button.jsx  CourseCard.jsx  CourseContainer.jsx  DaySelector.jsx  InfoBar.jsx  Loading.jsx  Schedule.jsx  Slot.jsx  TView.jsx  TopBar.jsx  UserInfo.jsx
App/Helper/: Data.js  storage.js
App/app/: _layout.jsx  index.jsx  personalise.jsx  timetable.jsx
admin/: output.css  package-lock.json  package.json
admin/src/: App.jsx
admin/src/Components/: DayCard.jsx  MetaData.jsx  Modals.jsx  TimeTable.jsx
admin/src/Constants/: Config.js  Data.js  test.js
backend/: Cargo.toml  data.json
backend/src/: main.rs  test.rs
backend/src/db/: config.rs
backend/src/models/: ext.rs  main_data.rs  meta_data.rs  mod.rs  time_parser.rs  wrapper.rs
backend/src/parser/: ai_parse.rs  mod.rs  models.rs  wrapper.rs
