[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
tokio = { version = "1.0", features = ["full"] }
serde = {version = "1.0.219" , features = ["derive"]}
serde_json = "1.0.140"
gemini_light_rs = "0.1.0"
dotenv = "0.15.0"
pdf-extract = "0.9.0"
tower-http = { version = "0.6.6", features = ["cors"] }
bcrypt = "0.17.0"
mongodb = "3.2.4"
anyhow = "1.0.98"
reqwest = "0.12.22"